# tiscamera-test

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
nix/overlays/: default.nix
nix/overlays/pkgs/tiscamera-test/: default.nix  result-dev
src/: main.c
